# frame-annotator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/screenshots/: README.md
examples/: action_recognition.yaml  defect_detection.yaml  surgical_safety.yaml
frame_annotator/: README.md  __init__.py  __main__.py  app.py  config.py
frame_annotator/templates/: annotator.html
surgical_annotator/: README.md  __init__.py  __main__.py  annotation_store.py  app.py  config.py  enforce_monotonic_cycle.py  export_yolo.py  frame_manager.py  mark_artifact_exclude.py  mark_broken_frames.py  migrate_annotations.py  migrate_phases_to_dual_tool.py  phase_definitions.py  phase_routes.py  precompute_depth.py  precompute_embeddings.py  precompute_sam.py  refresh_annotation_caches.py  routes.py  sam_segmentation.py
surgical_annotator/static/: index.html  phase.html
surgical_annotator/static/css/: styles.css
surgical_annotator/static/js/: main.js  phase.js
tests/: test_app.py  test_config.py
